better usability, adding more alt tags and replacing divs with headers/body etc

--- a/index.html
+++ b/index.html
@@ -2,44 +2,43 @@
 <html>
   <head>
     <title>Softeng 350 freecycle</title>
-    <!-- <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+    <meta charset="UTF-8" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <style></style>
   </head>
 
   <body>
-    <div class="whole-container">
-      <nav class="nav-bar">
-        <div class="nav-top">
-          <div class="page-navigation-buttons">
-            <a href="/"> About </a>
-            <a href="/"> Browse </a>
-            <a href="/"> Browse </a>
+    <main class="whole-container">
+      <header>
+        <nav class="nav-bar" alt="navbar containing links to home,about,browse, login, register">
+          <div class="nav-top">
+            <div class="page-navigation-buttons">
+              <a href="/" alt="link to Home"> Home </a>
+              <a href="/" alt="link to About"> About </a>
+              <a href="/" alt="link to Browse"> Browse </a>
+            </div>
+            <img src="Group2.svg" alt="website-logo" class="logo" />
+            <div class="log-sign">
+              <a href="/" class="login" alt="link to Login"> Login </a>
+              <button id="trigger-modal" class="sign-up" alt="Link to Register">Register</button>
+            </div>
           </div>
-          <img src="Group2.svg" alt="website-logo" class="logo" />
-          <div class="log-sign">
-            <a href="/" class="login"> Login </a>
-            <button id="trigger-modal" class="sign-up">Register</button>
-          </div>
-        </div>
-      </nav>
-
-      <!-- Header -->
-      <header></header>
+        </nav>
+      </header>
 
       <!-- Page content -->
       <div class="page-content">
         <div class="search-component">
-          <img src="background3.jpg" alt="search-background-image" class="search-background" />
+          <img src="background3.jpg" alt="main-search-background-image" class="search-background" />
 
           <div class="search-bar">
             <h1>Start Browsing Now!</h1>
             <form>
-              <input type="text" placeholder="Search items.." class="search" />
-              <a type="submit" class="submit-btn fa fa-search"></a>
+              <input type="text" placeholder="Search items.." class="search" alt="Searchbar to browse items" />
+              <a type="submit" class="submit-btn fa fa-search" alt="Searchbar submit button"></a>
             </form>
           </div>
         </div>
@@ -49,118 +48,122 @@
           <div class="items">
             <div class="item">
               <p>New Lynn</p>
-              <a href="/" class="item-link">
-                <img src="22823640.jpg" alt="item-image" class="item-image" />
+              <a href="/" class="item-link" alt="click on image to go to air cooler listing">
+                <img src="22823640.jpg" alt="Air Cooler-image" class="item-image" />
               </a>
-              <a href="/" class="item-link-text">Air Cooler</a>
+              <a href="/" class="item-link-text" alt="link to air cooler">Air Cooler</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>North shore</p>
-              <a href="/" class="item-link">
-                <img src="22833672.jpg" alt="item-image2" class="item-image" />
+              <a href="/" class="item-link" alt="click on image to go to couch listing">
+                <img src="22833672.jpg" alt="Couch-image" class="item-image" />
               </a>
-              <a href="/" class="item-link-text">Couch</a>
+              <a href="/" class="item-link-text" alt="link to couch">Couch</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Ponsonby</p>
-              <a href="/" class="item-link">
-                <img src="22834078.jpg" alt="item-image3" class="item-image" />
+              <a href="/" class="item-link" alt="click on image to go to tv cabinet listing">
+                <img src="22834078.jpg" alt="TV-Cabinet-image" class="item-image" />
               </a>
-              <a href="/" class="item-link-text">TV Cabinet</a>
+              <a href="/" class="item-link-text" alt="link to TV cabinet">TV Cabinet</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Grafton</p>
-              <a href="/" class="item-link">
+              <a href="/" class="item-link" alt="click on image to go to new item listing">
                 <img src="22833672.jpg" alt="item-image4" class="item-image" />
               </a>
-              <a href="/" class="item-link-text">New Item</a>
+              <a href="/" class="item-link-text" alt="Link to New Item">New Item</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Grafton</p>
-              <a href="/" class="item-link">
+              <a href="/" class="item-link" alt="click on image to go to new item listing">
                 <img src="22833672.jpg" alt="item-image4" class="item-image" />
               </a>
-              <a href="/" class="item-link-text">New Item</a>
+              <a href="/" class="item-link-text" alt="Link to New Item">New Item</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Grafton</p>
-              <a href="/" class="item-link">
+              <a href="/" class="item-link" alt="click on image to go to new item listing">
                 <img src="22833672.jpg" alt="item-image4" class="item-image" />
               </a>
-              <a href="/" class="item-link-text">New Item</a>
+              <a href="/" class="item-link-text" alt="Link to New Item">New Item</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Grafton</p>
-              <a href="/" class="item-link">
+              <a href="/" class="item-link" alt="click on image to go to new item listing">
                 <img src="22833672.jpg" alt="item-image4" class="item-image" />
               </a>
-              <a href="/" class="item-link-text">New Item</a>
+              <a href="/" class="item-link-text" alt="Link to New Item">New Item</a>
               <p>2 days ago</p>
             </div>
           </div>
         </div>
       </div>
-      <!-- <h1 style="word-wrap: break-word; font-size: 300px">wwwwwwwwwwwwwwwwwwwwwwwwwwww</h1> -->
-      <!-- End page content -->
-    </div>
+    </main>
+    <!-- End page content -->
 
-    <!-- Footer -->
-    <footer class=""></footer>
-
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
+    <!-- Modal -->
+    <div id="registerModal" class="modal">
       <!-- Modal content -->
-      <div class="modal-content">
+      <div class="modal-content" alt="register a new account. enter details below. press escape to exit">
         <span class="close">&times;</span>
         <img src="Group 3.svg" alt="website-logo" class="sub-logo" style="width: 200px" />
         <h1>Register</h1>
         <div class="form-box" id="form-ct">
-          <div class="box" id="user-details">
+          <div class="box" id="user-details" alt="user details form">
             <h2>User Details</h2>
             <form class="inputs">
-              <input type="text" placeholder="Given Name" class="input" /> <br />
-              <input type="text" placeholder="Surname" class="input" /> <br />
-              <input type="text" placeholder="Username" class="input" /> <br />
-              <input type="password" placeholder="Password" class="input" /> <br />
+              <label for="givename">Given Name</label>
+              <input type="text" placeholder="Given Name" class="input" alt="Enter given name" /> <br />
+              <label for="surname">Surname</label>
+              <input type="text" placeholder="Surname" class="input" alt="Enter surname" /> <br />
+              <label for="username">Username</label>
+              <input type="text" placeholder="Username" class="input" alt="Enter username" /> <br />
+              <label for="password">Password</label>
+              <input type="password" placeholder="Password" class="input" alt="Enter password" /> <br />
             </form>
           </div>
 
-          <div class="box" id="address-details">
+          <div class="box" id="address-details" alt="address details form">
             <h2>Addresses</h2>
             <form class="inputs">
-              <input type="text" placeholder="Home Address" class="input" /> <br />
-              <input type="text" placeholder="Work Address" class="input" /> <br />
+              <label for="homeaddress">Home Address</label>
+              <input type="text" placeholder="Home Address" class="input" alt="Enter home address" /> <br />
+              <label for="workaddress">Work Address</label>
+              <input type="text" placeholder="Work Address" class="input" alt="Enter work address" /> <br />
             </form>
           </div>
 
-          <div class="box" id="contact-details">
+          <div class="box" id="contact-details" alt="contact details form">
             <h2>Contacts</h2>
             <form class="inputs">
-              <input type="text" placeholder="Mobile Number" class="input" /> <br />
-              <input type="text" placeholder="Email" class="input" /> <br />
+              <label for="mobilenumber">Mobile Number</label>
+              <input type="text" placeholder="Mobile Number" class="input" alt="Enter mobile number" /> <br />
+              <label for="email">Email</label>
+              <input type="text" placeholder="Email" class="input" alt="Enter email" /> <br />
             </form>
           </div>
         </div>
-        <button type="submit" class="submit-details">Register</button>
-        <img src="Vector.svg" alt="background-logo" class="background-logo" />
+        <button type="submit" class="submit-details" alt="register button, click to submit details in the form">Register</button>
+        <img src="Vector.svg" alt="background-logo" class="background-logo" alt="background-logo" />
       </div>
     </div>
 
     <script>
       // Get the modal
-      var modal = document.getElementById('myModal');
+      var modal = document.getElementById('registerModal');
 
       // Get the button that opens the modal
       var btn = document.getElementById('trigger-modal');
@@ -168,22 +171,34 @@
       // Get the <span> element that closes the modal
       var span = document.getElementsByClassName('close')[0];
 
+      var modalOpen = false;
+
       // When the user clicks the button, open the modal
       btn.onclick = function () {
         modal.style.display = 'block';
+        modalOpen = true;
       };
 
       // When the user clicks on <span> (x), close the modal
       span.onclick = function () {
         modal.style.display = 'none';
+        modalOpen = false;
       };
 
       // When the user clicks anywhere outside of the modal, close it
       window.onclick = function (event) {
         if (event.target == modal) {
           modal.style.display = 'none';
+          modalOpen = false;
         }
       };
+
+      document.addEventListener('keydown', function (event) {
+        if (modalOpen && event.key === 'Escape') {
+          modal.style.display = 'none';
+          modalOpen = false;
+        }
+      });
     </script>
   </body>
 </html>
