added filter buttons

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <nav class="nav-bar" alt="navbar containing links to home,about,browse, login, register">
           <div class="nav-top">
             <div class="page-navigation-buttons">
-              <a href="/" alt="link to Home"> Home </a>
-              <a href="/" alt="link to About"> About </a>
-              <a href="/" alt="link to Browse"> Browse </a>
+              <a href="" alt="link to Home"> Home </a>
+              <a href="" alt="link to About"> About </a>
+              <a href="" alt="link to Browse"> Browse </a>
             </div>
             <img src="Group2.svg" alt="website-logo" class="logo" />
             <div class="log-sign">
-              <a href="/" class="login" alt="link to Login"> Login </a>
+              <a href="" class="login" alt="link to Login"> Login </a>
               <button id="trigger-modal" class="sign-up" alt="Link to Register">Register</button>
             </div>
           </div>
@@ -40,6 +40,13 @@
               <input type="text" placeholder="Search items.." class="search" alt="Searchbar to browse items" />
               <a type="submit" class="submit-btn fa fa-search" alt="Searchbar submit button"></a>
             </form>
+            <div class="categories">
+              <a href="" alt="link to clothing items">Clothing</a>
+              <a href="" alt="link to furniture items">Furniture</a>
+              <a href="" alt="link to electronic items">Electronics</a>
+              <a href="" alt="link to toys">Toys</a>
+              <a href="" alt="link to see more items">See more</a>
+            </div>
           </div>
         </div>
 
@@ -48,67 +55,68 @@
           <div class="items">
             <div class="item">
               <p>New Lynn</p>
-              <a href="/" class="item-link" alt="click on image to go to air cooler listing">
+              <a href="" class="item-link" alt="click on image to go to air cooler listing">
                 <img src="22823640.jpg" alt="Air Cooler-image" class="item-image" />
               </a>
-              <a href="/" class="item-link-text" alt="link to air cooler">Air Cooler</a>
+              <a href="" class="item-link-text" alt="link to air cooler">Air Cooler</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>North shore</p>
-              <a href="/" class="item-link" alt="click on image to go to couch listing">
+              <a href="" class="item-link" alt="click on image to go to couch listing">
                 <img src="22833672.jpg" alt="Couch-image" class="item-image" />
               </a>
-              <a href="/" class="item-link-text" alt="link to couch">Couch</a>
+              <a href="" class="item-link-text" alt="link to couch">Couch</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Ponsonby</p>
-              <a href="/" class="item-link" alt="click on image to go to tv cabinet listing">
+              <a href="" class="item-link" alt="click on image to go to tv cabinet listing">
                 <img src="22834078.jpg" alt="TV-Cabinet-image" class="item-image" />
               </a>
-              <a href="/" class="item-link-text" alt="link to TV cabinet">TV Cabinet</a>
+              <a href="" class="item-link-text" alt="link to TV cabinet">TV Cabinet</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Grafton</p>
-              <a href="/" class="item-link" alt="click on image to go to new item listing">
+              <a href="" class="item-link" alt="click on image to go to new item listing">
                 <img src="22833672.jpg" alt="item-image4" class="item-image" />
               </a>
-              <a href="/" class="item-link-text" alt="Link to New Item">New Item</a>
+              <a href="" class="item-link-text" alt="Link to New Item">New Item</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Grafton</p>
-              <a href="/" class="item-link" alt="click on image to go to new item listing">
+              <a href="" class="item-link" alt="click on image to go to new item listing">
                 <img src="22833672.jpg" alt="item-image4" class="item-image" />
               </a>
-              <a href="/" class="item-link-text" alt="Link to New Item">New Item</a>
+              <a href="" class="item-link-text" alt="Link to New Item">New Item</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Grafton</p>
-              <a href="/" class="item-link" alt="click on image to go to new item listing">
+              <a href="" class="item-link" alt="click on image to go to new item listing">
                 <img src="22833672.jpg" alt="item-image4" class="item-image" />
               </a>
-              <a href="/" class="item-link-text" alt="Link to New Item">New Item</a>
+              <a href="" class="item-link-text" alt="Link to New Item">New Item</a>
               <p>2 days ago</p>
             </div>
 
             <div class="item">
               <p>Grafton</p>
-              <a href="/" class="item-link" alt="click on image to go to new item listing">
+              <a href="" class="item-link" alt="click on image to go to new item listing">
                 <img src="22833672.jpg" alt="item-image4" class="item-image" />
               </a>
-              <a href="/" class="item-link-text" alt="Link to New Item">New Item</a>
+              <a href="" class="item-link-text" alt="Link to New Item">New Item</a>
               <p>2 days ago</p>
             </div>
           </div>
+          <a href="" alt="link to see more items" class="see-more-btn">See more</a>
         </div>
       </div>
     </main>
