--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="index2.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="index.css" /> -->
+    <link rel="stylesheet" type="text/css" href="index2.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <style></style>
   </head>
@@ -21,11 +21,11 @@
               <a href="" alt="link to About"> About </a>
               <a href="" alt="link to Browse"> Browse </a>
             </div>
-            <img src="Group2.svg" alt="website-logo" class="logo" />
-            <!-- <img src="Vector.svg" alt="website-logo" class="logo" /> -->
+            <!-- <img src="Group2.svg" alt="website-logo" class="logo" /> -->
+            <img src="sad.svg" alt="website-logo" class="logo" />
             <div class="log-sign">
               <a href="" class="login" alt="link to Login"> Login </a>
-              <button id="trigger-modal" class="sign-up" alt="Link to Register">Register</button>
+              <a id="trigger-modal" class="sign-up" alt="Link to Register">Register</a>
             </div>
           </div>
         </nav>
@@ -34,8 +34,8 @@
       <!-- Page content -->
       <div class="page-content">
         <div class="search-component">
-          <img src="background3.jpg" alt="main-search-background-image" class="search-background" />
-          <!-- <img src="background4.jpg" alt="main-search-background-image" class="search-background" /> -->
+          <!-- <img src="background3.jpg" alt="main-search-background-image" class="search-background" /> -->
+          <img src="background4.jpg" alt="main-search-background-image" class="search-background" />
 
           <div class="search-bar">
             <h1>Start Browsing Now!</h1>
